# fleet-commander

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.sampo/: config.toml
.sampo/changesets/: deps-rmcp2-acp12.md  f2a1-mcp-tunnel-protocol.md  f2a2a-mcp-relay-subcommand.md  f2a2b1-daemon-mcp-routing.md  f2a2b2-session-new-injection.md  f2a3-host-mcp-over-tunnel.md  f2b-pairing.md  f2c-inbox-drop-visibility.md  f2c1-list-connected.md  f2c2-send-inbox.md  f2d-reply-thread.md  multiarch-embed-symlink.md  phase2-live-watch.md  phase3-chunked-reads.md  phase3-git-diff.md  phase3-search-client.md  phase3-search-ui.md  phase3-search.md  phase4a-acp-tunnel.md  phase4b1-daemon-socket.md  phase4b2-concurrent-dispatch.md  phase4b2-daemon-session.md  phase4b2-host-rewire.md  phase4b2-host-transport-concurrency.md  phase4b2-reattach.md  phase4b2-session-protocol.md  phase4b2-single-bridge-unify.md
config/: default.toml
crates/fleet-agent/: Cargo.toml
crates/fleet-agent/src/: acp.rs  handlers.rs  lib.rs  main.rs  mcp.rs  search.rs  search_stream.rs  session.rs  tests.rs  util.rs  watch.rs
crates/fleet-agent/tests/: mcp_relay.rs  protocol.rs
crates/fleet-commander/: CHANGELOG.md  Cargo.toml  build.rs
crates/fleet-commander-core/: Cargo.toml  README.md
crates/fleet-commander-core/src/: agent_bin.rs  agent_runtime.rs  base_layer.rs  container.rs  event.rs  git.rs  lib.rs  service_fs.rs  session.rs  session_state.rs  workspace_fs.rs
crates/fleet-commander-core/src/agent_runtime/: auth.rs  connection.rs  mcp_tunnel.rs  mod.rs  resume.rs  session_client.rs  tunnel.rs  updates.rs
crates/fleet-commander-core/src/container/: auth.rs  config.rs  image.rs  lifecycle.rs  mod.rs  mounts.rs
crates/fleet-commander-core/tests/: service_fs_e2e.rs
crates/fleet-commander/src/: agent.rs  agent_kind.rs  app.rs  cli.rs  completion.rs  config.rs  embedded_agent.rs  event.rs  explorer.rs  init.rs  keybind.rs  main.rs  markdown.rs  mcp_server.rs  pairing.rs  ui.rs  workspace.rs
crates/fleet-commander/src/app/: actions.rs  commands.rs  explorer.rs  inbox.rs  input.rs  mod.rs  search.rs  session.rs  tests.rs  types.rs
crates/fleet-commander/src/ui/: agent_list.rs  agent_session.rs  conversation.rs  explorer.rs  inbox_popup.rs  input_box.rs  keys_footer.rs  overlay.rs  permission_popup.rs  session_header.rs  side_pane.rs  slash_popover.rs  style.rs  syntax.rs  test_support.rs
crates/fleet-git/: Cargo.toml
crates/fleet-git/src/: lib.rs
crates/fleet-protocol/: Cargo.toml
crates/fleet-protocol/src/: lib.rs
docs/: architecture.md
docs/design/: in-container-service.md
scripts/: build-fleet-agent.sh
src/: agent.rs  agent_kind.rs  agent_runtime.rs  app.rs  change_source.rs  cli.rs  completion.rs  container.rs  event.rs  init.rs  main.rs  markdown.rs  mcp_server.rs  terminal.rs  ui.rs  workspace.rs
