[package]
name = "multi-agent-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
agent-client-protocol = "0.14"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
notify = "8.2.0"
ratatui = "0.30.1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
syntect = "5.3.0"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "process", "signal", "time", "rt-multi-thread", "io-util", "net"] }
tokio-util = "0.7"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
