[package]
name = "fleet-commander"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for orchestrating multiple AI coding agents via ACP"
license = "MIT"
repository = "https://github.com/culpeo-labs/term"
keywords = ["tui", "acp", "agent", "copilot", "devcontainer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
agent-client-protocol = "0.14"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
devcontainer-lib = { git = "https://github.com/glecaros/dev.git", package = "devcontainer" }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6.0"
futures-util = "0.3.32"
notify = "8.2.0"
portable-pty = "0.9"
ratatui = "0.30.1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
syntect = "5.3.0"
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "process", "signal", "time", "rt-multi-thread", "io-util", "net"] }
tokio-util = "0.7"
toml = "1.1.2"
vt100 = "0.16"

[dev-dependencies]
tempfile = "3.27.0"
