[workspace]
resolver = "3"
members = [
    "crates/fleet-commander-core",
    "crates/fleet-commander",
    "crates/fleet-protocol",
    "crates/fleet-git",
    "crates/fleet-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/culpeo-labs/fleet-commander"

[workspace.dependencies]
anyhow = "1.0.102"
agent-client-protocol = "0.14"
base64 = "0.22"
crossterm = { version = "0.29.0", features = ["event-stream"] }
devcontainer-lib = { git = "https://github.com/glecaros/dev.git", branch = "staging", package = "devcontainer" }
dirs = "6.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "process", "signal", "time", "rt-multi-thread", "io-util", "net"] }
tokio-util = "0.7"
tracing = "0.1.44"
