[package]
name = "fleet-agent"
description = "In-container service daemon for Fleet Commander: serves fs/git over JSON-RPC stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fleet_agent"
path = "src/lib.rs"

[[bin]]
name = "fleet-agent"
path = "src/main.rs"

[dependencies]
fleet-protocol = { path = "../fleet-protocol" }
fleet-git = { path = "../fleet-git" }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
notify = "8.2.0"

[dev-dependencies]
tempfile = "3.27.0"
serde.workspace = true
