[package]
name = "fleet-agent"
description = "In-container service daemon for Fleet Commander: serves fs/git over JSON-RPC stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fleet_agent"
path = "src/lib.rs"

[[bin]]
name = "fleet-agent"
path = "src/main.rs"

[dependencies]
fleet-protocol = { path = "../fleet-protocol" }
fleet-git = { path = "../fleet-git" }
agent-client-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
notify = "8.2.0"
ignore = "0.4.26"
grep-searcher = "0.1.16"
grep-regex = "0.1.14"
grep-matcher = "0.1.7"

[dev-dependencies]
tempfile = "3.27.0"
serde.workspace = true
