[package]
name = "fleet-commander"
description = "Terminal UI for orchestrating multiple AI coding agents via ACP"
keywords = ["tui", "acp", "agent", "copilot", "devcontainer"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fleet-commander"
path = "src/main.rs"

[dependencies]
fleet-commander-core = { path = "../fleet-commander-core" }

anyhow.workspace = true
agent-client-protocol.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
notify = "8.2.0"
portable-pty = "0.9"
ratatui = "0.30.1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = { version = "1.0", features = ["chrono04"] }
syntect = "5.3.0"
toml = "1.1.2"
vt100 = "0.16"
pulldown-cmark = "0.13.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

[dev-dependencies]
tempfile = "3.27.0"
