[package]
name = "fleet-commander"
description = "Terminal UI for orchestrating multiple AI coding agents via ACP"
keywords = ["tui", "acp", "agent", "copilot", "devcontainer"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Distributed as a prebuilt binary via GitHub Releases (see release workflow),
# not crates.io. Sampo still versions, changelogs, tags, and releases it.
publish = false

[[bin]]
name = "fleet-commander"
path = "src/main.rs"

[features]
# Release-only: bake the static-musl `fleet-agent` binaries (built first by
# CI for each arch) into the commander so they ship in lockstep with the
# protocol version. `build.rs` reads FLEET_AGENT_X86_64 / FLEET_AGENT_AARCH64.
# Off by default so a plain `cargo build` needs no musl toolchains.
embed-agent = []

[dependencies]
fleet-commander-core = { path = "../fleet-commander-core" }

anyhow.workspace = true
agent-client-protocol.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
notify = "8.2.0"
# The `unstable-rendered-line-info` feature exposes `Paragraph::line_count`,
# which we need so follow-bottom mode accounts for soft-wrapped rows
# (otherwise long messages crop the last N rows). Tracked upstream at
# https://github.com/ratatui/ratatui/issues/293; revisit if it stabilises
# or the API changes.
ratatui = { version = "0.30.1", features = ["unstable-rendered-line-info"] }
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server", "transport-async-rw"] }
schemars = { version = "1.0", features = ["chrono04"] }
syntect = "5.3.0"
toml = "1.1.2"
pulldown-cmark = "0.13.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

[dev-dependencies]
tempfile = "3.27.0"
